tests/const_local_initializer_nonconst_bad.stderr
tests/const_local_initializer_nonconst_bad.sl:3:12: error: SL2055: const initializer must be a const expression: identifier is not a const value in this context
