tests/const_local_initializer_nonconst_bad.sl
fn f(x i32) {
	const y = x + 1
	_ = y
}

fn main() {}
